--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "build": "react-scripts build"
+    "build": "yarn build"
   },
   "dependencies": {
     "expo": "~46.0.16",
