--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web",
-    "build": "yarn build"
+    "web": "expo start --web"
   },
   "dependencies": {
     "expo": "~46.0.16",
