--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "build": "npm run build"
+    "build": "node -v && npm -v && npm clean-install && npm run build"
   },
   "dependencies": {
     "expo": "~46.0.16",
