--- a/package.json
+++ b/package.json
@@ -17,7 +17,27 @@
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
     "react-native-web": "~0.18.7",
-    "@expo/webpack-config": "^0.17.0"
+    "@expo/webpack-config": "^0.17.0",
+         "@invertase/react-native-apple-authentication": "^2.1.0",
+        "@react-native-community/async-storage": "^1.11.0",
+        "@react-native-community/toolbar-android": "github:react-native-community/toolbar-android",
+        "prop-types": "^15.7.2",
+        "react-native-action-button": "^2.8.5",
+        "react-native-animatable": "^1.3.3",
+        "react-native-collapsible": "^1.5.2",
+        "react-native-contacts": "^5.2.0",
+        "react-native-fbsdk": "^1.1.1",
+        "react-native-gifted-chat": "^0.16.1",
+        "react-native-navigation": "^3.7.0",
+        "react-native-swiper": "^1.6.0",
+        "react-native-vector-icons": "^6.7.0",
+        "react-redux": "^7.1.3",
+        "redux": "^4.0.5",
+        "redux-logger": "^3.0.6",
+        "redux-thunk": "^2.3.0",
+        "reselect": "^4.0.0",
+        "socket.io": "^2.3.0",
+        "uuid": "^8.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
